2011-03-16  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (UnicodeText): new function to convert a string 
	to UTF-16

	* src/win/wgraph.c (drawgraph, GraphGetTextLength) NEWS: support 
	"set encoding" for all currently defined encodings
	
2011-03-15  Ethan A Merritt  <merritt@u.washington.edu>

	* axis.c(copy_or_invent_formatstring): If the default tic format has
	insufficient precision to distinguish the two extremes of the axis
	range, increase the precision.

2011-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Auto-placement of the left margin of the plot
	was failing to allow room for "set key outside left".

	* term/post.trm: Add a %%Page statement in *.eps files, as current
	versions of standard tools seem to expect it.
	Bug #3046700

2011-03-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplot.rc, src/win/wgnuplot.exe.manifest: add new
	manifest for wgnuplot to enable visual styles
	
	* src/win/wmenu.c, src/win/wtext.c: remove unused variables to
	make compiler happy, avoid C++ style comments
	
	* src/win/wtext.c (TextInit), src/win/wmenu.c, src/win/wgnuplib.h,
	src/win/wresourc.h: add a statusbar to the text window,
	reduce size of text area accordingly
	
	* src/win/wtext.c (WndParentProc): [WM_GETMINMAXINFO] use active
	font to calculate minimum window size; take menu, toolbar and
	statusbar into account

2011-03-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/cygwin/Makefile (LDLIBS): Add newly needed library.

2011-03-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt, src/alloc.c, src/alloc.h, src/command.c,
	src/eval.c, src/fit.c, src/gpexecute.c, src/plot.c, src/syscfg.h,
	src/win/wcommon.h, src/win/wgnuplib.c, src/win/wgnuplib.h,
	src/win/wgnuplot.mnu, src/win/wgnuplot.rc, src/win/wgraph.c,
	src/win/winmain.c, src/win/wmenu.c, src/win/wpause.c,
	src/win/wprinter.c, src/win/wtext.c, term/win.trm:
	Remove Win16 support.
